fix: added spacing

--- a/style.css
+++ b/style.css
@@ -115,10 +115,12 @@ p {
 
 .content__leetcode-container {
   background-color: #14145C;
+  line-height: 30px;
   padding: 0 30px;
   margin-bottom: 20px;
   color: #5858DA;
   border-bottom: 2px solid #0E0E3E;
+  margin-top: 5px;
 }
 
 .content__leetcode-code {
